fixed card height on smaller screen

--- a/app/assets/css/pages/home.css
+++ b/app/assets/css/pages/home.css
@@ -70,3 +70,9 @@
         width: 50px;
     }
 }
+
+@media screen and (max-width: 360px) {
+    .card-max-height{
+        height: 80px;
+    }
+}
